--- a/public/header.css
+++ b/public/header.css
@@ -47,4 +47,7 @@ footer {
     position: relative;
     font-family: "DM Sans", sans-serif;
     font-weight: 900;
+    position: absolute;
+    bottom: 0;
+    margin-left: 30px;
 }
