--- a/public/main.css
+++ b/public/main.css
@@ -33,13 +33,49 @@
     border-radius: 59.95px;
     background: #FDF9D8;
     box-shadow: 8.269px 8.269px 25.013px 0 rgba(0, 0, 0, 0.25);
-    position: relative;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .your-notes{
     color: #FD7E35;
     font-family: "DM Sans", sans-serif;
     font-weight: 900;
+    margin-left: 40px;
+    margin-bottom: 0;
+}
+
+.note-links{
+    display: inline-block;
+    width: 330px;
+    margin-left: 40px;
+    margin-top: 0;
+    color: #FD7E35;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 500;
+    text-align: justify;
+}
+
+.button-container{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: auto;
+}
+.post-button{
+    background-color: #5C8001;
+    color: white;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 400;
+    font-size: 19PX;
+    padding: 10px 40px;
+    border-radius: 15px;
+    border: transparent;
+    box-shadow: 8.269px 8.269px 25.013px 0 rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    margin-bottom: 30px;
+    margin-right: 25px;
 }
 
 .main-note-container:hover{
@@ -48,14 +84,12 @@
     transition: transform 2s ease-in-out;
 }
 
-.mini-note1:hover{
+.mini-note1:hover, .mini-note2:hover{
     width: 420px;
     height: 420px;
     transition: transform 2s ease-in-out;
 }
 
-.mini-note2:hover {
-    width: 420px;
-    height: 420px;
-    transition: transform 2s ease-in-out;
+.post-button:hover{
+    background-color: #527201;
 }
