--- a/views/input-page.ejs
+++ b/views/input-page.ejs
@@ -1,6 +1,11 @@
 <%- include("partials/header.ejs") %>
-
-
-
-
-<%- include("partials/footer.ejs") %>
+    <div class="main-input-card">
+        <div class="input-card1">
+            <div class="input-card2">
+                <input type="text" class="post-title" name="title" placeholder="Enter Title">
+                <hr >
+                <textarea class="message" name="message" rows="4" cols="50" placeholder="What’s on your mind today?"></textarea>
+            </div>
+        </div>
+    </div>
+    <%- include("partials/footer.ejs") %>
