--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <title>Reflectify</title>
     <link rel="stylesheet" href="/header.css">
     <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/input-page.css">
+    <link rel="stylesheet" href="/post.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
