--- a/public/main.css
+++ b/public/main.css
@@ -56,6 +56,11 @@
     font-family: "DM Sans", sans-serif;
     font-weight: 500;
     text-align: justify;
+    min-height: 100px;
+    text-align: justify;
+    overflow-y: auto;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
 }
 
 .button-container{
