--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/header.css">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/post.css">
+    <link rel="stylesheet" href="/public/content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
