removed type of text

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,8 +2,9 @@
     <div class="main-input-card">
         <div class="input-card1">
             <div class="input-card2">
+                <!-- Route to submit and identify the texts -->
                 <form action="/post" method="POST">
-                    <input type="text" class="post-title" name="title" placeholder="Enter Title">
+                    <input class="post-title" name="title" placeholder="Enter Title">
                     <hr>
                     <textarea class="message" name="message" rows="4" cols="50"
                         placeholder="What’s on your mind today?"></textarea>
